--- a/firstproject/src/main/resources/templates/layouts/header.mustache
+++ b/firstproject/src/main/resources/templates/layouts/header.mustache
@@ -47,3 +47,9 @@
         </div>
     </div>
 </nav>
+{{#msg}}
+    <div class="alert alert-primary alert-dismissible fade show" role="alert">
+        {{msg}}
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+{{/msg}}
