--- a/firstproject/src/main/resources/templates/articles/edit.mustache
+++ b/firstproject/src/main/resources/templates/articles/edit.mustache
@@ -1,20 +1,16 @@
 {{>layouts/header}}
 
-<form class="container" action="/articles/{{article.id}}/edit" method="post">
+<form class="container" action="/articles/update" method="post">
+
+    <input type="text" class="form-control"  name="title" value="{{article.title}}">
+    <textarea class="form-control" rows="3" name="content">{{article.content}}</textarea>
+
     <input type="hidden" name="id" value="{{article.id}}">
 
-    <div class="mb-3">
-        <label class="form-label">제목</label>
-        <input type="text" name="title" class="form-control" value="{{article.title}}" required>
-    </div>
-
-    <div class="mb-3">
-        <label class="form-label">내용</label>
-        <textarea class="form-control" name="content" rows="3" required>{{article.content}}</textarea>
-    </div>
-
-    <button type="submit" class="btn btn-primary">수정 완료</button>
-    <a href="/articles" class="btn btn-secondary ms-2">취소</a>
+    <button type="submit" class="btn btn-primary">Submit</button>
+    <a href="/articles/{{article.id}}">Back</a>
 </form>
+
+
 
 {{>layouts/footer}}
