--- a/firstproject/src/main/resources/templates/articles/index.mustache
+++ b/firstproject/src/main/resources/templates/articles/index.mustache
@@ -1,23 +1,25 @@
 {{>layouts/header}}
 
+
 <table class="table">
     <thead>
-        <tr>
-            <th scope="col">ID</th>
-            <th scope="col">TITLE</th>
-            <th scope="col">CONTENT</th>
-        </tr>
+    <tr>
+        <th scope="col">ID</th>
+        <th scope="col">TITLE</th>
+        <th scope="col">CONTENT</th>
+    </tr>
     </thead>
     <tbody>
-        {{#articleList}}
+    {{#articleList}}
         <tr>
             <th>{{id}}</th>
-            <th><a href="/articles/{{id}}">{{title}}</a></th>
+            <th><a href="/articles/{{id}}">{{title}} </a></th>
             <th>{{content}}</th>
         </tr>
-        {{/articleList}}
+    {{/articleList}}
     </tbody>
 </table>
-<a href="/articles/new" class="btn btn-primary">새 글</a>
+
+<a href="/articles/new">New Article</a>
 
 {{>layouts/footer}}
