--- a/firstproject/src/main/resources/templates/articles/show.mustache
+++ b/firstproject/src/main/resources/templates/articles/show.mustache
@@ -1,27 +1,27 @@
 {{>layouts/header}}
 
+
 <table class="table">
     <thead>
-        <tr>
-            <th scope="col">ID</th>
-            <th scope="col">TITLE</th>
-            <th scope="col">CONTENT</th>
-        </tr>
+    <tr>
+        <th scope="col">ID</th>
+        <th scope="col">TITLE</th>
+        <th scope="col">CONTENT</th>
+    </tr>
     </thead>
     <tbody>
-        {{#article}}
+    {{#article}}
         <tr>
             <th>{{id}}</th>
             <th>{{title}}</th>
             <th>{{content}}</th>
         </tr>
-        {{/article}}
+    {{/article}}
     </tbody>
-
 </table>
-<a href="/articles/{{id}}/edit" class="btn btn-primary">수정</a>
-<a href="/articles/{{id}}/delete" class="btn btn-danger">삭제</a>
 
-<a href="/articles" class="btn btn-secondary">목록</a>
+<a href="/articles/{{article.id}}/edit" class="btn btn-primary">Edit</a>
+<a href="/articles/{{article.id}}/delete" class="btn btn-danger">Delete</a>
+<a href="/articles">Go to Article List</a>
 
 {{>layouts/footer}}
